// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Workspace test widths array and heights array 1`] = `
Array [
  Object {
    "h": 1,
    "i": "card_0",
    "w": 1,
    "x": 0,
    "y": 0,
  },
  Object {
    "h": 1,
    "i": "card_1",
    "w": 1,
    "x": 0,
    "y": 1,
  },
  Object {
    "h": 1,
    "i": "card_2",
    "w": 1,
    "x": 0,
    "y": 2,
  },
]
`;

exports[`testing Workspace test widths array and numerical height 1`] = `
Array [
  Object {
    "h": 1,
    "i": "card_0",
    "w": 1,
    "x": 0,
    "y": 0,
  },
  Object {
    "h": 1,
    "i": "card_1",
    "w": 1,
    "x": 0,
    "y": 1,
  },
  Object {
    "h": 1,
    "i": "card_2",
    "w": 1,
    "x": 0,
    "y": 2,
  },
]
`;

exports[`testing Workspace test widths only 1`] = `
Array [
  Object {
    "h": 1,
    "i": "card_0",
    "w": 1,
    "x": 0,
    "y": 0,
  },
  Object {
    "h": 1,
    "i": "card_1",
    "w": 1,
    "x": 0,
    "y": 1,
  },
  Object {
    "h": 1,
    "i": "card_2",
    "w": 1,
    "x": 0,
    "y": 2,
  },
  Object {
    "h": 1,
    "i": "card_3",
    "w": 1,
    "x": 0,
    "y": 3,
  },
  Object {
    "h": 1,
    "i": "card_4",
    "w": 1,
    "x": 0,
    "y": 4,
  },
]
`;
